--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/sdk": "^1.6.3",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
